# gazelle:prefix github.com/GoogleCloudPlatform/testgrid
load("@io_k8s_repo_infra//defs:run_in_workspace.bzl", "workspace_binary")

workspace_binary(
    name = "go",
    cmd = "@go_sdk//:bin/go",
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cluster/canary:all-srcs",
        "//cluster/prod:all-srcs",
        "//cmd/config_merger:all-srcs",
        "//cmd/summarizer:all-srcs",
        "//cmd/updater:all-srcs",
        "//config:all-srcs",
        "//hack:all-srcs",
        "//images:all-srcs",
        "//internal/result:all-srcs",
        "//metadata:all-srcs",
        "//pb:all-srcs",
        "//pkg/merger:all-srcs",
        "//pkg/summarizer:all-srcs",
        "//pkg/updater:all-srcs",
        "//resultstore:all-srcs",
        "//util/gcs:all-srcs",
        "//util/metrics:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

exports_files([
    "go.mod",
    "go.sum",
])
