load("@io_bazel_rules_go//go:def.bzl", "go_test")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tabulator_bench_test.go"],
    deps = [
        "//pkg/tabulator:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics/prometheus:go_default_library",
    ],
)
