filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pb/api/v1:all-srcs",
        "//pb/config:all-srcs",
        "//pb/custom_evaluator:all-srcs",
        "//pb/issue_state:all-srcs",
        "//pb/state:all-srcs",
        "//pb/summary:all-srcs",
        "//pb/test_status:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
