load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "strings.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/testgrid/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//util/gcs:all-srcs",
        "//util/metrics:all-srcs",
        "//util/queue:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
