# Copyright 2020 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "prod",
    objects = [
        ":namespace",  # Must be first
        ":summarizer",
        ":updater",
        ":config_merger",
        ":tabulator",
        ":knative-namespace",  # Must be first
        ":knative-summarizer",
        ":knative-updater",
    ],
)

CLUSTER = "{STABLE_TESTGRID_CLUSTER}"

MULTI_KIND = None

k8s_object(
    name = "updater",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "updater.yaml",
)

k8s_object(
    name = "summarizer",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "summarizer.yaml",
)

k8s_object(
    name = "config_merger",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "config_merger.yaml",
)

k8s_object(
    name = "tabulator",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "tabulator.yaml",
)

k8s_object(
    name = "namespace",
    cluster = CLUSTER,
    kind = "Namespace",
    template = "namespace.yaml",
)

k8s_object(
    name = "knative-updater",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "knative/updater.yaml",
)

k8s_object(
    name = "knative-summarizer",
    cluster = CLUSTER,
    kind = MULTI_KIND,
    template = "knative/summarizer.yaml",
)

k8s_object(
    name = "knative-namespace",
    cluster = CLUSTER,
    kind = "Namespace",
    template = "knative/namespace.yaml",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
