load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:def.bzl", "go_image")

go_image(
    name = "image",
    directory = "/",
    files = [":config_merger"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "config_merger",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/config_merger",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//pkg/merger:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics/prometheus:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
