load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:def.bzl", "make_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/entomologist",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//pb/config:go_default_library",
        "//pb/issue_state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_test_infra//pkg/io:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)

go_binary(
    name = "entomologist",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pb/config:go_default_library",
        "//pb/issue_state:go_default_library",
        "@io_k8s_test_infra//pkg/io:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/github/fakegithub:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

make_image(
    name = "image",
    directory = "/",
    files = [":entomologist"],
    visibility = ["//visibility:public"],
)
