load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "state_comparer",
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/compare_states",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/state_comparer",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//pb/state:go_default_library",
        "//util/gcs:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pb/state:go_default_library",
        "//util/gcs:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
