load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:def.bzl", "make_image")

# gazelle:prefix github.com/GoogleCloudPlatform/testgrid/cmd/summarizer
gazelle(
    name = "gazelle",
)

make_image(
    name = "image",
    directory = "/",
    files = [":summarizer"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
