load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:def.bzl", "go_image")

go_image(
    name = "image",
    directory = "/",
    files = [":summarizer"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "summarizer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/testgrid/cmd/summarizer",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/pubsub:go_default_library",
        "//pkg/summarizer:go_default_library",
        "//util:go_default_library",
        "//util/gcs:go_default_library",
        "//util/metrics:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
